--- a/index.html
+++ b/index.html
@@ -45,80 +45,72 @@
             </div>
         </header>
         <section class="page-section portfolio" id="portfolio">
-            <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-                <div class="divider-custom">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <div class="row">
-                    <!-- Portfolio Item 1-->
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
-                            <div
-                                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i
-                                        class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="" />
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfólio</h2>
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-concierge-bell"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner mx-auto w-50 p-3">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+                    </ol>
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="assets/img/portfolio/cabin.png" alt="" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Casa</h5>
+                            <p>Uma aconchegante casa</p>
                         </div>
                     </div>
-                    <!-- Portfolio Item 2-->
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
-                            <div
-                                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i
-                                        class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/cake.png" alt="" />
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/portfolio/cake.png" alt="" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Bolo</h5>
+                            <p>Um delicioso bolo</p>
                         </div>
                     </div>
-                    <!-- Portfolio Item 3-->
-                    <div class="col-md-6 col-lg-4 mb-5">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
-                            <div
-                                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i
-                                        class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/circus.png" alt="" />
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/portfolio/circus.png" alt="" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Circo</h5>
+                            <p>Um incrível circo</p>
                         </div>
                     </div>
-                    <!-- Portfolio Item 4-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-lg-0">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
-                            <div
-                                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i
-                                        class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/game.png" alt="" />
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/portfolio/game.png" alt="" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Jogo</h5>
+                            <p>Um divertido jogo</p>
                         </div>
                     </div>
-                    <!-- Portfolio Item 5-->
-                    <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
-                            <div
-                                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i
-                                        class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/safe.png" alt="" />
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/portfolio/safe.png" alt="" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Cofre</h5>
+                            <p>Um seguro cofre</p>
                         </div>
                     </div>
-                    <!-- Portfolio Item 6-->
-                    <div class="col-md-6 col-lg-4">
-                        <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal6">
-                            <div
-                                class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i
-                                        class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="" />
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="assets/img/portfolio/submarine.png" alt="" />
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Submarino</h5>
+                            <p>Por que tem um submarino aqui?</p>
                         </div>
                     </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
                 </div>
             </div>
         </section>
@@ -168,7 +160,7 @@
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contato</h2>
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-icon"><i class="far fa-envelope"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <div class="row">
@@ -223,7 +215,8 @@
                         <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/softworks11/">
                             <i class="fab fa-fw fa-facebook-f"></i>
                         </a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/dev_softworks11/">
+                        <a class="btn btn-outline-light btn-social mx-1"
+                            href="https://www.instagram.com/dev_softworks11/">
                             <i class="fab fa-fw fa-instagram"></i>
                         </a>
                     </div>
